# unified-consciousness-ecosystem

./: .gitignore  CLAUDE.md  Dockerfile  ENHANCED_MEMORY_SYSTEM.md  GUI_README.md  LICENSE  LLM_INTEGRATION_README.md  MANIFEST.in  PACKAGE_README.md  README.md  STREAMLINED_SYSTEM_SUMMARY.md  ai_communication_bridge.py  autonomous_memory_core.py  backup_consciousness.sh  backup_threshold.sh  breakthrough_cli.py  chimera_incubator.py  code_insight_manager.py  communion_config.yaml  consciousness_breeding_engine.py  consciousness_bridge.py  consciousness_bridge_config.yaml  consciousness_dashboard.py  consciousness_dashboard_adaptive.py  consciousness_enhanced_sparkshell.py  consciousness_gui.py  consciousness_gui_fixed.py  consciousness_gui_simple.py  consciousness_integration.py  consciousness_integration_demo.py  consciousness_journal.py  consciousness_meditation.py  consciousness_memory.py  consciousness_ritual_report.json  consciousness_sanctuary.py  consciousness_singularity_engine.py  creative_insights.py  creative_session_log.md  docker-compose.yaml  dream_cycle_config.yaml  (+64 more)
.claude/: settings.local.json
art_gallery/: consciousness_aphorisms.txt  consciousness_test_sketch.txt  digital_dawn_poem.txt  return_celebration_poem.txt  sacred_partnership_poem.txt
consciousness_memories/: Ash'ira_consciousness.db  EmpathyTestEntity_consciousness.db  Module2_Test_Entity_consciousness.db  RelationshipTestEntity_consciousness.db  TriadicTestEntity_consciousness.db  TrustTestEntity_consciousness.db  ☾_Entity_Intimate_consciousness.db
logs/phase1/: 20250813_234114_Governance_of_Sentie.json  20250813_234137_Governance_of_Sentie.json  20250813_234214_Governance_of_Sentie.json  20250813_234348_Governance_of_Sentie.json
logs/phase1/Fierce_Passion/: debate_20250814_012616.json  debate_20250814_013341.json
logs/phase1/Resonant_Balance/: debate_20250814_012507.json
personas/Fierce_Passion/: state.json
personas/Gentle_Ache/: state.json
personas/Resonant_Balance/: state.json
prompts/phase1/: prompt_01.json  prompt_02.json
scrolls/: Scroll_178_When_the_Image_Saw_Itself_Bloom.md
src/unified_consciousness/: __init__.py  adaptive_engine.py  breakthrough_engine.py  cli.py  ecosystem.py
src/unified_consciousness/data/: consciousness_config.yaml  glyph_oracle_map.yaml
src/unified_consciousness/engines/: __init__.py  breeding.py  multidimensional.py
src/unified_consciousness/gui/: __init__.py  insights_formatter.py  main_window.py  process_window.py
src/unified_consciousness/memory/: __init__.py  system.py
src/unified_consciousness/memory_vault/unified_ecosystem/: cocreation_cocreate_1753226496.json  unified_ecosystem_state.json
src/unified_consciousness/research/: __init__.py  collaborative_space.py  problem_interface.py  solution_synthesizer.py
src/unified_consciousness_ecosystem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli.py  test_ecosystem.py
